<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThreadsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/thread_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thread_title"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thread_image"/>

    <ImageView
        android:id="@+id/thread_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/thread_image_optional"
        android:src="@drawable/ic_add_a_photo_green_24dp"
        android:padding="30dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/thread_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thread_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/thread_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thread_comments"/>

        <Button
            android:id="@+id/button_addComments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_comments"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/thread_comments_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"/>

</LinearLayout>